Proyecto convertido a responsive

--- a/style.css
+++ b/style.css
@@ -180,3 +180,30 @@ ul {
 .button-restart:active {
     transform: translateY(-1px);
 }
+
+@media (max-width: 768px){
+    .header-banner {
+        flex: 40%;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+    }
+    .input-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 1em;
+        width: 80%;
+    }
+    .input-name {
+        border-radius: 25px;
+    }
+    button {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+        
+    .button-add {
+        border-radius: 25px;
+    }
+    
+}
