mejora en los botones para responsive

--- a/style.css
+++ b/style.css
@@ -205,6 +205,13 @@ ul {
     .button-add {
         border-radius: 25px;
     }
+    .button-draw {
+        width: 100%;
+        padding: 10px;
+    }
+    .button-draw img {
+        margin-right: 10px;
+    }
     
 }
 
