mejora final del boton para el responsive de la página

--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ ul {
     }
     .button-draw {
         width: 100%;
-        padding: 10px;
+        padding: 10px 30px;
     }
     .button-draw img {
         margin-right: 10px;
